# LangLearnCopilot

./: .pre-commit-config.yaml  LICENSE  README.md  TODO  pyproject.toml
.github/workflows/: check_pr.yml  deploy_pypi.yml  deploy_testpypi.yml
examples/: data_from_webpage.py  generate_phrase.py  generate_phrase_for_multi_words.py  generate_words.py
langlearncopilot/: __init__.py  datatypes.py
langlearncopilot/generators/: __init__.py  main.py  utils.py
langlearncopilot/generators/configs/: prompts.yml
langlearncopilot/llm_calls/: __init__.py  llama2_call.py  openai_call.py  set_credentials.py
langlearncopilot/parsers/: __init__.py  llm_phrase_parser.py  site_parser.py
langlearncopilot/parsers/tests/: test_site_parser.py
langlearncopilot/utilities/: save_anki_format.py
langlearncopilot/utilities/tests/: test_save_anki_format.py
tests/: test_generators.py
